# Chef_helper

./: Dockerfile  LICENSE  README.md  client.py  pyproject.toml  reciept_searcher_service.py  reciept_soup.json  requirements.txt  server.py  setup.py
app/: client_app.py
