[tool.poetry]
name = "chef-helper"
version = "0.1.0"
description = ""
authors = ["osandrey <osandreyman@gmail.com>"]
readme = "README.md"
packages = [{include = "chef_helper"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
